# serializer version: 1
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."session_recording_retention_period",
         "posthog_team"."survey_config",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."web_analytics_pre_aggregated_tables_enabled",
         "posthog_team"."web_analytics_pre_aggregated_tables_version",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."default_evaluation_environments_enabled",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency",
         "posthog_team"."experiment_recalculation_time"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.1
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."session_recording_retention_period",
         "posthog_team"."survey_config",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."web_analytics_pre_aggregated_tables_enabled",
         "posthog_team"."web_analytics_pre_aggregated_tables_version",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."default_evaluation_environments_enabled",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency",
         "posthog_team"."experiment_recalculation_time"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.2
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."session_recording_retention_period",
         "posthog_team"."survey_config",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."web_analytics_pre_aggregated_tables_enabled",
         "posthog_team"."web_analytics_pre_aggregated_tables_version",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."default_evaluation_environments_enabled",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency",
         "posthog_team"."experiment_recalculation_time"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.3
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."session_recording_retention_period",
         "posthog_team"."survey_config",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."web_analytics_pre_aggregated_tables_enabled",
         "posthog_team"."web_analytics_pre_aggregated_tables_version",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."default_evaluation_environments_enabled",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency",
         "posthog_team"."experiment_recalculation_time"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.4
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."session_recording_retention_period",
         "posthog_team"."survey_config",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."web_analytics_pre_aggregated_tables_enabled",
         "posthog_team"."web_analytics_pre_aggregated_tables_version",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."default_evaluation_environments_enabled",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."plugins_opt_in",
         "posthog_team"."opt_out_capture",
         "posthog_team"."event_names",
         "posthog_team"."event_names_with_usage",
         "posthog_team"."event_properties",
         "posthog_team"."event_properties_with_usage",
         "posthog_team"."event_properties_numerical",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency",
         "posthog_team"."experiment_recalculation_time"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.5
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE (UPPER(("posthog_person"."properties" ->> 'urls')::text) LIKE UPPER('%["abcd"]%')
         AND "posthog_person"."properties" ? 'urls'
         AND NOT (("posthog_person"."properties" -> 'urls') = 'null'::jsonb)
         AND "posthog_person"."team_id" = 99999)
  '''
# ---
# name: TestDjangoPropertiesToQ.test_array_property_as_string_on_persons.6
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 99999
         AND "posthog_persondistinctid"."team_id" = 99999)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertiesToQ.test_icontains_with_array_value
  '''
  SELECT "posthog_person"."uuid"
  FROM "posthog_person"
  WHERE (UPPER(("posthog_person"."properties" ->> '$key')::text) LIKE UPPER('%[''red'']%')
         AND "posthog_person"."properties" ? '$key'
         AND NOT (("posthog_person"."properties" -> '$key') = 'null'::jsonb)
         AND "posthog_person"."team_id" = 99999)
  '''
# ---
# name: TestDjangoPropertiesToQ.test_icontains_with_array_value.1
  '''
  SELECT "posthog_person"."uuid"
  FROM "posthog_person"
  WHERE (UPPER(("posthog_person"."properties" ->> '$key')::text) LIKE UPPER('%red%')
         AND "posthog_person"."properties" ? '$key'
         AND NOT (("posthog_person"."properties" -> '$key') = 'null'::jsonb)
         AND "posthog_person"."team_id" = 99999)
  '''
# ---
# name: TestDjangoPropertiesToQ.test_person_relative_date_parsing_with_invalid_date
  '''
  SELECT 1 AS "a"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'example_id'
         AND "posthog_person"."team_id" = 99999
         AND ("posthog_person"."properties" -> 'created_at') > '["2m", "3d"]'::jsonb)
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertiesToQ.test_person_relative_date_parsing_with_invalid_date.1
  '''
  SELECT 1 AS "a"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'example_id'
         AND "posthog_person"."team_id" = 99999
         AND ("posthog_person"."properties" -> 'created_at') > '"bazinga"'::jsonb)
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'cohort'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.1
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."cohort_type",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 99999
         AND "posthog_team"."project_id" = 99999)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.10
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 99999
         AND "posthog_persondistinctid"."team_id" = 99999)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.11
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 99999
         AND "posthog_persondistinctid"."team_id" = 99999)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.2
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE (((("posthog_person"."properties" -> 'url') = '"https://whatever.com"'::jsonb
           AND "posthog_person"."properties" ? 'url'
           AND NOT (("posthog_person"."properties" -> 'url') = 'null'::jsonb)
           AND ("posthog_person"."properties" -> 'bla') = '1'::jsonb
           AND "posthog_person"."properties" ? 'bla'
           AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)
           AND ((("posthog_person"."properties" -> 'bla') = '1'::jsonb
                 AND "posthog_person"."properties" ? 'bla'
                 AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb))
                OR (("posthog_person"."properties" -> 'bla') = '2'::jsonb
                    AND "posthog_person"."properties" ? 'bla'
                    AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb))))
          OR (("posthog_person"."properties" -> 'bla') = '3'::jsonb
              AND "posthog_person"."properties" ? 'bla'
              AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND "posthog_person"."team_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.3
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 99999
         AND "posthog_persondistinctid"."team_id" = 99999)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.4
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 99999
         AND "posthog_persondistinctid"."team_id" = 99999)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.5
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.6
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."version",
         "posthog_featureflag"."last_modified_by_id",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics",
         "posthog_featureflag"."is_remote_configuration",
         "posthog_featureflag"."has_encrypted_payloads",
         "posthog_featureflag"."evaluation_runtime"
  FROM "posthog_featureflag"
  INNER JOIN "posthog_team" ON ("posthog_featureflag"."team_id" = "posthog_team"."id")
  WHERE (NOT ("posthog_featureflag"."is_remote_configuration"
              AND "posthog_featureflag"."is_remote_configuration" IS NOT NULL)
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.7
  '''
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."project_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural",
         "posthog_grouptypemapping"."default_columns",
         "posthog_grouptypemapping"."detail_dashboard_id"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."project_id" = 99999
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.8
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 99999
         AND "posthog_team"."project_id" = 99999)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts.9
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE (((("posthog_person"."properties" -> 'url') = '"https://whatever.com"'::jsonb
           AND "posthog_person"."properties" ? 'url'
           AND NOT (("posthog_person"."properties" -> 'url') = 'null'::jsonb)
           AND ("posthog_person"."properties" -> 'bla') = '1'::jsonb
           AND "posthog_person"."properties" ? 'bla'
           AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)
           AND ((("posthog_person"."properties" -> 'bla') = '1'::jsonb
                 AND "posthog_person"."properties" ? 'bla'
                 AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb))
                OR (("posthog_person"."properties" -> 'bla') = '2'::jsonb
                    AND "posthog_person"."properties" ? 'bla'
                    AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb))))
          OR (("posthog_person"."properties" -> 'bla') = '3'::jsonb
              AND "posthog_person"."properties" ? 'bla'
              AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND "posthog_person"."team_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'cohort'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match.1
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."cohort_type",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 99999
         AND "posthog_team"."project_id" = 99999)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match.10
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 99999
         AND "posthog_persondistinctid"."team_id" = 99999)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match.2
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE (((("posthog_person"."properties" -> 'url') = '"https://whatever.com"'::jsonb
           AND "posthog_person"."properties" ? 'url'
           AND NOT (("posthog_person"."properties" -> 'url') = 'null'::jsonb)
           AND ("posthog_person"."properties" -> 'bla') = '1'::jsonb
           AND "posthog_person"."properties" ? 'bla'
           AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)
           AND ("posthog_person"."properties" -> 'bla') = '1'::jsonb
           AND "posthog_person"."properties" ? 'bla'
           AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)
           AND ("posthog_person"."properties" -> 'bla') = '2'::jsonb
           AND "posthog_person"."properties" ? 'bla'
           AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb))
          OR (("posthog_person"."properties" -> 'bla') = '3'::jsonb
              AND "posthog_person"."properties" ? 'bla'
              AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND "posthog_person"."team_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match.3
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 99999
         AND "posthog_persondistinctid"."team_id" = 99999)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match.4
  '''
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."project_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural",
         "posthog_grouptypemapping"."default_columns",
         "posthog_grouptypemapping"."detail_dashboard_id"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."project_id" = 99999
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match.5
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match.6
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."version",
         "posthog_featureflag"."last_modified_by_id",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics",
         "posthog_featureflag"."is_remote_configuration",
         "posthog_featureflag"."has_encrypted_payloads",
         "posthog_featureflag"."evaluation_runtime"
  FROM "posthog_featureflag"
  INNER JOIN "posthog_team" ON ("posthog_featureflag"."team_id" = "posthog_team"."id")
  WHERE (NOT ("posthog_featureflag"."is_remote_configuration"
              AND "posthog_featureflag"."is_remote_configuration" IS NOT NULL)
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match.7
  '''
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."project_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural",
         "posthog_grouptypemapping"."default_columns",
         "posthog_grouptypemapping"."detail_dashboard_id"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."project_id" = 99999
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match.8
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 99999
         AND "posthog_team"."project_id" = 99999)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_cohorts_no_match.9
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE (((("posthog_person"."properties" -> 'url') = '"https://whatever.com"'::jsonb
           AND "posthog_person"."properties" ? 'url'
           AND NOT (("posthog_person"."properties" -> 'url') = 'null'::jsonb)
           AND ("posthog_person"."properties" -> 'bla') = '1'::jsonb
           AND "posthog_person"."properties" ? 'bla'
           AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)
           AND ("posthog_person"."properties" -> 'bla') = '1'::jsonb
           AND "posthog_person"."properties" ? 'bla'
           AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)
           AND ("posthog_person"."properties" -> 'bla') = '2'::jsonb
           AND "posthog_person"."properties" ? 'bla'
           AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb))
          OR (("posthog_person"."properties" -> 'bla') = '3'::jsonb
              AND "posthog_person"."properties" ? 'bla'
              AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND "posthog_person"."team_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'cohort'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.1
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'cohort'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.10
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 99999
         AND "posthog_persondistinctid"."team_id" = 99999)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.11
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."version",
         "posthog_featureflag"."last_modified_by_id",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics",
         "posthog_featureflag"."is_remote_configuration",
         "posthog_featureflag"."has_encrypted_payloads",
         "posthog_featureflag"."evaluation_runtime"
  FROM "posthog_featureflag"
  INNER JOIN "posthog_team" ON ("posthog_featureflag"."team_id" = "posthog_team"."id")
  WHERE (NOT ("posthog_featureflag"."is_remote_configuration"
              AND "posthog_featureflag"."is_remote_configuration" IS NOT NULL)
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.12
  '''
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."project_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural",
         "posthog_grouptypemapping"."default_columns",
         "posthog_grouptypemapping"."detail_dashboard_id"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."project_id" = 99999
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.13
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.14
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."version",
         "posthog_featureflag"."last_modified_by_id",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics",
         "posthog_featureflag"."is_remote_configuration",
         "posthog_featureflag"."has_encrypted_payloads",
         "posthog_featureflag"."evaluation_runtime"
  FROM "posthog_featureflag"
  INNER JOIN "posthog_team" ON ("posthog_featureflag"."team_id" = "posthog_team"."id")
  WHERE (NOT ("posthog_featureflag"."is_remote_configuration"
              AND "posthog_featureflag"."is_remote_configuration" IS NOT NULL)
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.15
  '''
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."project_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural",
         "posthog_grouptypemapping"."default_columns",
         "posthog_grouptypemapping"."detail_dashboard_id"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."project_id" = 99999
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.16
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'cohort'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.17
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."survey_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.18
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.19
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."version",
         "posthog_featureflag"."last_modified_by_id",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics",
         "posthog_featureflag"."is_remote_configuration",
         "posthog_featureflag"."has_encrypted_payloads",
         "posthog_featureflag"."evaluation_runtime"
  FROM "posthog_featureflag"
  INNER JOIN "posthog_team" ON ("posthog_featureflag"."team_id" = "posthog_team"."id")
  WHERE (NOT ("posthog_featureflag"."is_remote_configuration"
              AND "posthog_featureflag"."is_remote_configuration" IS NOT NULL)
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.2
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'cohort'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.20
  '''
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."project_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural",
         "posthog_grouptypemapping"."default_columns",
         "posthog_grouptypemapping"."detail_dashboard_id"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."project_id" = 99999
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.21
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.22
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."version",
         "posthog_featureflag"."last_modified_by_id",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics",
         "posthog_featureflag"."is_remote_configuration",
         "posthog_featureflag"."has_encrypted_payloads",
         "posthog_featureflag"."evaluation_runtime"
  FROM "posthog_featureflag"
  INNER JOIN "posthog_team" ON ("posthog_featureflag"."team_id" = "posthog_team"."id")
  WHERE (NOT ("posthog_featureflag"."is_remote_configuration"
              AND "posthog_featureflag"."is_remote_configuration" IS NOT NULL)
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.23
  '''
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."project_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural",
         "posthog_grouptypemapping"."default_columns",
         "posthog_grouptypemapping"."detail_dashboard_id"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."project_id" = 99999
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.24
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'cohort'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.25
  '''
  SELECT "posthog_team"."id",
         "posthog_team"."uuid",
         "posthog_team"."organization_id",
         "posthog_team"."parent_team_id",
         "posthog_team"."project_id",
         "posthog_team"."api_token",
         "posthog_team"."app_urls",
         "posthog_team"."name",
         "posthog_team"."slack_incoming_webhook",
         "posthog_team"."created_at",
         "posthog_team"."updated_at",
         "posthog_team"."anonymize_ips",
         "posthog_team"."completed_snippet_onboarding",
         "posthog_team"."has_completed_onboarding_for",
         "posthog_team"."onboarding_tasks",
         "posthog_team"."ingested_event",
         "posthog_team"."autocapture_opt_out",
         "posthog_team"."autocapture_web_vitals_opt_in",
         "posthog_team"."autocapture_web_vitals_allowed_metrics",
         "posthog_team"."autocapture_exceptions_opt_in",
         "posthog_team"."autocapture_exceptions_errors_to_ignore",
         "posthog_team"."person_processing_opt_out",
         "posthog_team"."secret_api_token",
         "posthog_team"."secret_api_token_backup",
         "posthog_team"."session_recording_opt_in",
         "posthog_team"."session_recording_sample_rate",
         "posthog_team"."session_recording_minimum_duration_milliseconds",
         "posthog_team"."session_recording_linked_flag",
         "posthog_team"."session_recording_network_payload_capture_config",
         "posthog_team"."session_recording_masking_config",
         "posthog_team"."session_recording_url_trigger_config",
         "posthog_team"."session_recording_url_blocklist_config",
         "posthog_team"."session_recording_event_trigger_config",
         "posthog_team"."session_recording_trigger_match_type_config",
         "posthog_team"."session_replay_config",
         "posthog_team"."survey_config",
         "posthog_team"."capture_console_log_opt_in",
         "posthog_team"."capture_performance_opt_in",
         "posthog_team"."capture_dead_clicks",
         "posthog_team"."surveys_opt_in",
         "posthog_team"."heatmaps_opt_in",
         "posthog_team"."flags_persistence_default",
         "posthog_team"."feature_flag_confirmation_enabled",
         "posthog_team"."feature_flag_confirmation_message",
         "posthog_team"."session_recording_version",
         "posthog_team"."signup_token",
         "posthog_team"."is_demo",
         "posthog_team"."access_control",
         "posthog_team"."week_start_day",
         "posthog_team"."inject_web_apps",
         "posthog_team"."test_account_filters",
         "posthog_team"."test_account_filters_default_checked",
         "posthog_team"."path_cleaning_filters",
         "posthog_team"."timezone",
         "posthog_team"."data_attributes",
         "posthog_team"."person_display_name_properties",
         "posthog_team"."live_events_columns",
         "posthog_team"."recording_domains",
         "posthog_team"."human_friendly_comparison_periods",
         "posthog_team"."cookieless_server_hash_mode",
         "posthog_team"."primary_dashboard_id",
         "posthog_team"."default_data_theme",
         "posthog_team"."extra_settings",
         "posthog_team"."modifiers",
         "posthog_team"."correlation_config",
         "posthog_team"."session_recording_retention_period_days",
         "posthog_team"."external_data_workspace_id",
         "posthog_team"."external_data_workspace_last_synced_at",
         "posthog_team"."api_query_rate_limit",
         "posthog_team"."revenue_tracking_config",
         "posthog_team"."drop_events_older_than",
         "posthog_team"."base_currency"
  FROM "posthog_team"
  WHERE "posthog_team"."id" = 99999
  LIMIT 21
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.26
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.27
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."version",
         "posthog_featureflag"."last_modified_by_id",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics",
         "posthog_featureflag"."is_remote_configuration",
         "posthog_featureflag"."has_encrypted_payloads",
         "posthog_featureflag"."evaluation_runtime"
  FROM "posthog_featureflag"
  INNER JOIN "posthog_team" ON ("posthog_featureflag"."team_id" = "posthog_team"."id")
  WHERE (NOT ("posthog_featureflag"."is_remote_configuration"
              AND "posthog_featureflag"."is_remote_configuration" IS NOT NULL)
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.28
  '''
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."project_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural",
         "posthog_grouptypemapping"."default_columns",
         "posthog_grouptypemapping"."detail_dashboard_id"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."project_id" = 99999
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.29
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.3
  '''
  SELECT "posthog_filesystem"."team_id",
         "posthog_filesystem"."id",
         "posthog_filesystem"."path",
         "posthog_filesystem"."depth",
         "posthog_filesystem"."type",
         "posthog_filesystem"."ref",
         "posthog_filesystem"."href",
         "posthog_filesystem"."shortcut",
         "posthog_filesystem"."meta",
         "posthog_filesystem"."created_at",
         "posthog_filesystem"."created_by_id",
         "posthog_filesystem"."project_id"
  FROM "posthog_filesystem"
  WHERE ("posthog_filesystem"."ref" = '0001'
         AND "posthog_filesystem"."team_id" = 99999
         AND "posthog_filesystem"."type" = 'cohort'
         AND NOT ("posthog_filesystem"."shortcut"
                  AND "posthog_filesystem"."shortcut" IS NOT NULL))
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.30
  '''
  SELECT "posthog_featureflag"."id",
         "posthog_featureflag"."key",
         "posthog_featureflag"."name",
         "posthog_featureflag"."filters",
         "posthog_featureflag"."rollout_percentage",
         "posthog_featureflag"."team_id",
         "posthog_featureflag"."created_by_id",
         "posthog_featureflag"."created_at",
         "posthog_featureflag"."deleted",
         "posthog_featureflag"."active",
         "posthog_featureflag"."version",
         "posthog_featureflag"."last_modified_by_id",
         "posthog_featureflag"."rollback_conditions",
         "posthog_featureflag"."performed_rollback",
         "posthog_featureflag"."ensure_experience_continuity",
         "posthog_featureflag"."usage_dashboard_id",
         "posthog_featureflag"."has_enriched_analytics",
         "posthog_featureflag"."is_remote_configuration",
         "posthog_featureflag"."has_encrypted_payloads",
         "posthog_featureflag"."evaluation_runtime"
  FROM "posthog_featureflag"
  INNER JOIN "posthog_team" ON ("posthog_featureflag"."team_id" = "posthog_team"."id")
  WHERE (NOT ("posthog_featureflag"."is_remote_configuration"
              AND "posthog_featureflag"."is_remote_configuration" IS NOT NULL)
         AND NOT "posthog_featureflag"."deleted"
         AND "posthog_team"."project_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.31
  '''
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."project_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural",
         "posthog_grouptypemapping"."default_columns",
         "posthog_grouptypemapping"."detail_dashboard_id"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."project_id" = 99999
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.32
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 99999
         AND "posthog_team"."project_id" = 99999)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.33
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 99999
         AND "posthog_team"."project_id" = 99999)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.34
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 99999
         AND "posthog_team"."project_id" = 99999)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.35
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 99999
         AND "posthog_team"."project_id" = 99999)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.36
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE (NOT ((("posthog_person"."properties" -> 'bla') = '1'::jsonb
               AND "posthog_person"."properties" ? 'bla'
               AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb))
              OR (("posthog_person"."properties" -> 'bla') = '2'::jsonb
                  AND "posthog_person"."properties" ? 'bla'
                  AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND NOT ((("posthog_person"."properties" -> 'bla') = '3'::jsonb
                   AND "posthog_person"."properties" ? 'bla'
                   AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb))
                  OR (("posthog_person"."properties" -> 'bla') = '4'::jsonb
                      AND "posthog_person"."properties" ? 'bla'
                      AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND ("posthog_person"."properties" -> 'other') = '1'::jsonb
         AND "posthog_person"."properties" ? 'other'
         AND NOT (("posthog_person"."properties" -> 'other') = 'null'::jsonb)
         AND "posthog_person"."team_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.37
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 99999
         AND "posthog_persondistinctid"."team_id" = 99999)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.38
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 99999
         AND "posthog_persondistinctid"."team_id" = 99999)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.4
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."cohort_type",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 99999
         AND "posthog_team"."project_id" = 99999)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.5
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."cohort_type",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 99999
         AND "posthog_team"."project_id" = 99999)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.6
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."cohort_type",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 99999
         AND "posthog_team"."project_id" = 99999)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.7
  '''
  SELECT "posthog_cohort"."id",
         "posthog_cohort"."name",
         "posthog_cohort"."description",
         "posthog_cohort"."team_id",
         "posthog_cohort"."deleted",
         "posthog_cohort"."filters",
         "posthog_cohort"."query",
         "posthog_cohort"."version",
         "posthog_cohort"."pending_version",
         "posthog_cohort"."count",
         "posthog_cohort"."created_by_id",
         "posthog_cohort"."created_at",
         "posthog_cohort"."is_calculating",
         "posthog_cohort"."last_calculation",
         "posthog_cohort"."errors_calculating",
         "posthog_cohort"."last_error_at",
         "posthog_cohort"."is_static",
         "posthog_cohort"."cohort_type",
         "posthog_cohort"."groups"
  FROM "posthog_cohort"
  INNER JOIN "posthog_team" ON ("posthog_cohort"."team_id" = "posthog_team"."id")
  WHERE (NOT "posthog_cohort"."deleted"
         AND "posthog_cohort"."id" = 99999
         AND "posthog_team"."project_id" = 99999)
  ORDER BY "posthog_cohort"."id" ASC
  LIMIT 1
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.8
  '''
  SELECT "posthog_person"."id",
         "posthog_person"."created_at",
         "posthog_person"."properties_last_updated_at",
         "posthog_person"."properties_last_operation",
         "posthog_person"."team_id",
         "posthog_person"."properties",
         "posthog_person"."is_user_id",
         "posthog_person"."is_identified",
         "posthog_person"."uuid",
         "posthog_person"."version"
  FROM "posthog_person"
  WHERE (NOT ((("posthog_person"."properties" -> 'bla') = '1'::jsonb
               AND "posthog_person"."properties" ? 'bla'
               AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb))
              OR (("posthog_person"."properties" -> 'bla') = '2'::jsonb
                  AND "posthog_person"."properties" ? 'bla'
                  AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND NOT ((("posthog_person"."properties" -> 'bla') = '3'::jsonb
                   AND "posthog_person"."properties" ? 'bla'
                   AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb))
                  OR (("posthog_person"."properties" -> 'bla') = '4'::jsonb
                      AND "posthog_person"."properties" ? 'bla'
                      AND NOT (("posthog_person"."properties" -> 'bla') = 'null'::jsonb)))
         AND ("posthog_person"."properties" -> 'other') = '1'::jsonb
         AND "posthog_person"."properties" ? 'other'
         AND NOT (("posthog_person"."properties" -> 'other') = 'null'::jsonb)
         AND "posthog_person"."team_id" = 99999)
  '''
# ---
# name: TestDjangoPropertyGroupToQ.test_property_group_to_q_with_negation_cohorts.9
  '''
  SELECT "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."person_id" = 99999
         AND "posthog_persondistinctid"."team_id" = 99999)
  ORDER BY "posthog_persondistinctid"."id" ASC
  '''
# ---
